immersive text on mobile view spcing fixed

--- a/index.css
+++ b/index.css
@@ -45,9 +45,12 @@
   left: 16px;
   font-size: 2rem;
 }
+.interactive-mobile{
+  display: none;  
+}
 @media screen and (max-width: 768px) {
   .immersive-text {
-    margin-left: 2rem;
+    margin-left: 3rem;
     margin-top: 8rem;
     padding-right: 1rem;
   }
@@ -56,5 +59,8 @@
   }
   .bottom-left {
     font-size: 1rem;
+  }
+  .interactive-mobile{
+    display: block;
   }
 }
